Update code fix regression overflow missing

--- a/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
@@ -41,6 +41,7 @@
 .admin__data-grid-wrap {
     margin-bottom: 2rem;
     max-width: 100%;
+    overflow-x: auto;
     padding-bottom: 1rem;
     padding-top: @data-grid-header-row__indent;
 }
